hphp/hack/test/sound_dynamic/typing/sdt_lambda.bad.php.exp
File "sdt_lambda.bad.php", line 10, characters 8-55:
Function  `;anonymous` is not dynamically callable. (Typing[4402])
  File "sdt_lambda.bad.php", line 10, characters 49-55:
  Invalid return type
  File "sdt_lambda.bad.php", line 10, characters 8-55:
  Expected `dynamic` because method must be callable in a dynamic context
  File "sdt_lambda.bad.php", line 10, characters 53-53:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
